--- a/css/main.css
+++ b/css/main.css
@@ -47,8 +47,9 @@ html {
   100% {
     transform: rotate(360deg);
   }
+
 }
 
 .hand-hour {
-  animation: hand-rotation 6s linear infinite;
+  animation: hand-rotate 6s linear infinite;
 }
